[project]
name = "project"
version = "1.0.0"
description = "Used for pre-commit"
authors = [{ name = "Aurorian Clouds" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "autoflake>=2.0,<3",
    "black>=22.1,<23",
    "coverage>=7.0,<8",
    "flake8>=6.0.0,<7",
    "isort>=5.8.0,<6",
    "pre-commit>=2.12.1,<3",
    "yamllint>=1.28,<2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
