[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "Area where analyses may be performed"
authors = ["Aurorian Clouds"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.4.8"
# not yet compatible as ydata-profiling restricting typeguard & panderas needs higher one
# ydata-profiling = { extras = ["notebook"], version = "^4.3.2" }
ipywidgets = "^8.0.2"
bokeh = "^3.0.0"
sous_chef = {path = "../sous-chef/", develop = true}
utilities = {path = "../utilities/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
