[tool.poetry]
name = "house_keeper"
version = "0.0.5"
description = "UI for coordination of household tasks"
authors = ["Aurorian Clouds"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.17"
psycopg2 = "^2.9.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
