[tool.poetry]
name = "jellyfin helpers"
version = "0.0.1"
description = "Helper scrips to deal with media libraries for e.g. Jellyfin media server."
authors = ["Aurorian Clouds"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0"
pydantic = "^1.10.12" # pandera does not support >= 2.0
hydra-core = "^1.3.2"
pandera = "^0.16.1"
utilities = {path = "../utilities/", develop = true}
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
