[project]
name = "jellyfin-helpers"
version = "0.0.1"
description = "Helper scrips to deal with media libraries for e.g. Jellyfin media server."
authors = [{ name = "Aurorian Clouds" }]
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=2.0,<3",
    # pandera does not support >= 2.0
    "pydantic>=1.10.12,<2",
    "hydra-core>=1.3.2,<2",
    "joblib>=1.3.2,<2",
    # numpy not compatible with panderas version
    "numpy>=1.26.0,<2",
    "pandera>=0.16.1,<0.17",
    "utilities @ ../utilities",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "pytest-cov>=4.1.0,<5",
    "freezegun>=1.1,<2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "gsheets: marks tests using gsheets",
    "jellyfin: marks tests using jellyfin",
    "todoist: marks tests using todoist, which requires periodically updating API key",
    "youtube: marks tests using youtube",
]
