[tool.poetry]
name = "sous_chef_web"
version = "1.2.3"
description = "Visualizations for recipes & meal plans"
authors = ["Aurorian Clouds"]

[tool.poetry.scripts]
web-app = "sous_chef_web.main:start"

[tool.poetry.dependencies]
uvicorn = "^0.23.0"
python = ">=3.9,<3.11"
fastapi = "^0.115.11"
jinja2 = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.0"
sous_chef = {path = "../sous-chef/", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"