[tool.poetry]
name = "sous_chef"
version = "1.2.3"
description = "Plans your meals and grocery list"
authors = ["Aurorian Clouds"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fuzzywuzzy = "^0.18.0"
hydra-core = "^1.2"
pandas = "^1.3"
pandera = "^0.11"
pint = "^0.19"
pytesseract = "^0.3.9"
python-Levenshtein = "^0.12.2"
regex = "^2022.9.13"
structlog = "^22.1.0"
# 0.1.5 has issues with products
openfoodfacts = "0.1.3"
pydantic = "^1.9.2"
termcolor = "^2.1.1"
fastapi = "^0.98.0"
pip = "^23.1.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
utilities = {path = "../utilities/", develop = true}

[tool.poetry.group.test.dependencies]
coverage = "^6.5"
pytest = "^7.1.2"
pytest-structlog = "^0.5"
freezegun = "^1.1.0"

[tool.poetry.group.analysis.dependencies]
jupyterlab = "^3.4.8"
# holding back seaborn, pydantic version
pandas-profiling = { extras = ["notebook"], version = "^3.3.0" }
ipywidgets = "^8.0.2"
bokeh = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "dropbox: marks tests using dropbox",
    "gsheets: marks tests using gsheets",
    "openfoodfacts: marks tests using OpenFoodFacts API",
    "todoist: marks tests using todoist, which requires periodically updating API key"
]