[tool.poetry]
name = "sous_chef"
version = "1.2.3"
description = "Plans your meals and grocery list"
authors = ["Aurorian Clouds"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fuzzywuzzy = "^0.18"
hydra-core = "^1.2"
pandas = "^2.0"
pandera = "^0.19"
pint = "^0.19"
pytesseract = "^0.3.9"
python-Levenshtein = "^0.12.2"
regex = "^2023.6.3"
structlog = "^23.1.0"
# 0.1.5 has issues with products
openfoodfacts = "0.1.3"
pydantic = "^1.9"
termcolor = "^2.1"
fastapi = "^0.100"
pip = "^23.1"
joblib = "^1.3.2"
# numpy not compatible with other versions
numpy = "^1.26.0"
uvicorn = {extras = ["standard"], version = "^0.23"}
utilities = {path = "../utilities/", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
pytest-cov = "^4.1"
pytest-structlog = "^0.5"
freezegun = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "dropbox: marks tests using dropbox",
    "gsheets: marks tests using gsheets",
    "openfoodfacts: marks tests using OpenFoodFacts API",
    "todoist: marks tests using todoist, which requires periodically updating API key"
]