[project]
name = "sous_chef"
version = "1.2.3"
description = "Plans your meals and grocery list"
authors = [{ name = "Aurorian Clouds" }]
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
fuzzywuzzy = ">=0.18,<0.19"
hydra-core = ">=1.2,<2"
pandas = ">=2.0,<3"
pandera = ">=0.19,<0.20"
pint = ">=0.19,<0.20"
pytesseract = ">=0.3.9,<0.4"
python-Levenshtein = ">=0.12.2,<0.13"
regex = ">=2023.6.3,<2024"
structlog = ">=23.1.0,<24"
openfoodfacts = "==0.1.3" # 0.1.5 has issues with products
pydantic = ">=1.9,<2"
termcolor = ">=2.1,<3"
fastapi = ">=0.100,<0.101"
pip = ">=23.1,<24"
joblib = ">=1.3.2,<2"
numpy = ">=1.26.0,<2"
uvicorn = {extras = ["standard"], version = ">=0.23,<0.24"}
utilities = {path = "../utilities", develop = true}
setuptools = "==81.0.0"

[dependency-groups]
dev = [
    "pytest>=7.1,<8",
    "pytest-cov>=4.1,<5",
    "pytest-structlog>=0.5,<0.6",
    "freezegun>=1.1,<2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "dropbox: marks tests using dropbox",
    "gsheets: marks tests using gsheets",
    "openfoodfacts: marks tests using OpenFoodFacts API",
    "todoist: marks tests using todoist, which requires periodically updating API key"
]
