[tool.poetry]
name = "utilities"
version = "0.1.0"
description = "Utilities used throughout Aurorian Clouds"
authors = ["Aurorian Clouds"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hydra-core = "^1.2"
pandas = "^1.3"
# issue with test__get_workbook_with_folder with 2.0.6
pygsheets = "2.0.5"
structlog = "^22.1.0"
tenacity = "^8.1.0"
todoist-api-python = "^2.0.0"

[tool.poetry.group.test.dependencies]
coverage = "^6.5"
pytest = "^7.1.2"
pytest-structlog = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
