[project]
name = "utilities"
version = "0.1.0"
description = "Utilities used throughout Aurorian Clouds"
authors = [{ name = "Aurorian Clouds" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "hydra-core>=1.2,<2",
    "joblib>=1.3.2,<2",
    "pandas>=2.0,<3",
    "pygsheets==2.0.5",
    "structlog>=23.1.0,<24",
    "tenacity>=8.1.0,<9",
    "todoist-api-python>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "coverage>=6.5,<7",
    "pytest>=7.1.2,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-structlog>=0.5,<0.6",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "gsheets: marks tests using gsheets",
    "todoist: marks tests using todoist, which requires periodically updating API key"
]
